--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-lib_deps = chris--a/Keypad@^3.1.1
+lib_deps = 
+	chris--a/Keypad@^3.1.1
+	t-vk/ESP32 BLE Keyboard@^0.3.2
